# StudioOne

./: .gitignore  .gitmodules  CMakeLists.txt
include/: StudioOne.h
libs/: CMakeLists.txt
src/: StudioOne.cpp  main.cpp
